--- a/src/mmop/client/mainWindow.fxml
+++ b/src/mmop/client/mainWindow.fxml
@@ -3,12 +3,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.canvas.Canvas?>
 
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="center">
-    <TextArea fx:id="chatTextArea" VBox.vgrow="ALWAYS" editable="false"></TextArea>
+    <HBox VBox.vgrow="ALWAYS">
+        <Canvas fx:id="drawAreaCanvas" width="500" height="500" onMousePressed="#onCanvasMousePressed" onMouseDragged="#onCanvasMouseDragged" onMouseReleased="#onCanvasMouseReleased"></Canvas>
+        <TextArea fx:id="chatTextArea" wrapText="true" HBox.hgrow="ALWAYS" editable="false"></TextArea>
+    </HBox>
     <HBox>
         <TextField fx:id="messageTextField" HBox.hgrow="ALWAYS"></TextField>
         <Button fx:id="sendMessageButton" text="Send" defaultButton="true" onAction="#onSendMessageButtonClick"></Button>
-        <Button fx:id="clearChatButton" text="Clear" cancelButton="true" onAction="#onClearChatButtonClick"></Button>
+        <Button fx:id="clearButton" text="Clear" cancelButton="true" onAction="#onClearButtonClick"></Button>
     </HBox>
 </VBox>
